--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
 
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Portafolio de Shirley Mallea Pizarro"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <link
       rel="stylesheet"
@@ -28,8 +25,8 @@
       font-family: 'Roboto', sans-serif;
     }
   </style>
-
-    <title>React App</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+    <title>Portafolio - Shirley Mallea Pizarro</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
