--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Roboto', sans-serif;
+      border: 1px solid grey
     }
   </style>
   <link rel="icon" type="image/png" href="favicon.png">
